--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@ body {
 body {
     background: white;
     font-family: "Times New Roman", Times, serif;
+    
+}
+
+.fix{
+    width: 100%;
+    height: 100vh;
     text-align: center;
 }
 
